--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "4.18.1",
+    "express-fileupload": "^1.4.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "4.6.0",
     "socket.io": "^4.5.1"
