--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "4.18.1",
     "express-fileupload": "^1.4.3",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^2.0.11",
     "mongodb": "4.6.0",
     "multer": "^1.4.3-lts.1",
     "socket.io": "^4.5.1"
