--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon --ignore data/ --ignore public/ app.js"
+    "server": "nodemon --ignore data/ --ignore public/ app.js",
+    "vercel-build": "echo 'Hello'"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "4.18.1",
