--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon --ignore data/ --ignore public/ app.js",
-    "vercel-build": "echo 'Hello'"
+    "server": "nodemon --ignore data/ --ignore public/ app.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +24,7 @@
     "mercadopago": "^2.0.11",
     "mongodb": "4.6.0",
     "multer": "^1.4.3-lts.1",
+    "nodemailer": "^6.9.16",
     "socket.io": "^4.5.1"
   }
 }
