--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,18 @@
-DB_USER=
-DB_PASSWORD=
-NODE_ENV=
+DB_URI=
 
-URI=
+MP_ACCESS_TOKEN=
+
+JWT_SECRET=
+
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+
+FRONT_URL=
+BACK_URL=
+
+MAIL_MAILER=
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
