--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "keywords": [],
   "author": "Francisco Andreo, Roni Gueiser",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "devDependencies": {
     "nodemon": "^2.0.16"
   },
